--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "capstone-project",
   "version": "0.1.0",
   "main": "server/index.js",
+  "engines": {
+    "node": "14.18.1"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
