--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "capstone-project",
   "version": "0.1.0",
-  "main": "server/index.js",
+  "main": "./server/index.js",
   "engines": {
     "node": "14.18.1"
   },
